adds a hint for exercise 2.2 too

--- a/exercise-2/digit-recognition.ipynb
+++ b/exercise-2/digit-recognition.ipynb
@@ -313,7 +313,9 @@
     "1. `nn.Conv2d(16, 32, kernel_size=5)` with $5 \\times 5$ kernel\n",
     "2. `nn.MaxPool2d(2)`\n",
     "\n",
-    "applied to images of dimensions $64 \\times 64$?"
+    "applied to images of dimensions $64 \\times 64$?\n",
+    "\n",
+    "*Hint: beware that some choice of dimensions may be incompatible, and may break the convolution pipeline*"
    ]
   },
   {
